good/src/main/java/com/example/sample/domain/model/item/EquipmentType.java
package com.example.sample.domain.model.item;

/**
 * 装備の種類
 */
public enum EquipmentType {
  ARMOR,
  ARM,
  WEAPON;
}
