bad/src/main/java/com/example/sample/objects/MagicType.java
package com.example.sample.objects;

/**
 * リスト6.10 魔法の種類を定義したenum
 */
public enum MagicType implements BattleTechnique {
  FIRE,
  SHIDEN,
  HELL_FIRE;
}
